WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198852
[iOS] Selection handles "Lollipops" can become gray and stay gray
https://bugs.webkit.org/show_bug.cgi?id=198852
Summary
[iOS] Selection handles "Lollipops" can become gray and stay gray
Daniel Bates
Reported
2019-06-13 23:00:55 PDT
Created
attachment 372108
[details]
Screen capture - ignore my initial trouble getting the selection I wanted 😀 Steps to reproduce: Ensure that your are signed into bugs.webkit.org and that you have Mail setup. 1. Visit <
https://bugs.webkit.org/show_bug.cgi?id=198834
>. 2. Select some text, say the word "test" in the description of that bug. 3. Tap my name "Daniel Bates" in the attachment listing to open a mail compose sheet. 4. Close the sheet. Then the selection "lollipops" are gray. Moreover, you can interact with them, extend the selection, etc and they stay gray. (BTW most of the time the report steps above work as-is. One time, I had to repeat steps 3 and 4 to get this bug to reproduce)
Attachments
Screen capture - ignore my initial trouble getting the selection I wanted 😀
(5.91 MB, video/quicktime)
2019-06-13 23:00 PDT
,
Daniel Bates
no flags
Details
Patch
(1.72 KB, patch)
2019-07-06 15:09 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-06-13 23:02:37 PDT
<
rdar://problem/51736130
>
Daniel Bates
Comment 2
2019-07-06 15:09:54 PDT
Created
attachment 373584
[details]
Patch
Jon Lee
Comment 3
2019-07-10 14:15:14 PDT
What's the next step here?
Daniel Bates
Comment 4
2019-07-10 14:58:06 PDT
(In reply to Jon Lee from
comment #3
)
> What's the next step here?
I was going to try to write an API test for this, but I already moved on to another bug and I probably won't circle back to add the test for a few days.
Daniel Bates
Comment 5
2019-07-10 15:04:32 PDT
Pinged Wenson on IRC and he is okay with landing the patch without a test for now.
Daniel Bates
Comment 6
2019-07-10 15:06:04 PDT
Filed
bug #199685
to track adding a test.
Daniel Bates
Comment 7
2019-07-10 15:07:15 PDT
Comment on
attachment 373584
[details]
Patch Clearing flags on attachment: 373584 Committed
r247328
: <
https://trac.webkit.org/changeset/247328
>
Daniel Bates
Comment 8
2019-07-10 15:07:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug