[iOS] Selection handles "Lollipops" can become gray and stay gray https://bugs.webkit.org/show_bug.cgi?id=198852 <rdar://problem/51736130>

Reviewed by Wenson Hsieh.

Tell the text interaction assistant to update the selection UI when the tint color changes.
We do this by way of deactivating and activating selection.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView tintColorDidChange]):

Canonical link: https://commits.webkit.org/213567@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247328 268f45cc-cd09-0410-ab3c-d52691b4dbfc